[package]
name = "ilp-service"
version = "0.1.0"
authors = ["Nick Schipano <nschipano@forte.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
config = "0.9.3"
env_logger = "0.6.2"
interledger = { git = "https://github.com/emschwartz/interledger-rs"}
tokio = "0.1.22"
serde = "1.0.98"
futures = "0.1.28"
log = "0.4.8"
